--- a/deploy/local/local.env
+++ b/deploy/local/local.env
@@ -1,5 +1,5 @@
-SERVER_HOST="206.189.228.238"
+SERVER_HOST="<set-server-ip-or-host>"
 APP_NAME="web_test"
 REPO_PATH="https://github.com/EliseevAlexey/$APP_NAME.git"
-SSH_COMMAND="ssh -oHostKeyAlgorithms=+ssh-dss root@$SERVER_HOST" # For Digital Ocean
+SSH_COMMAND="ssh -o StrictHostKeyChecking=accept-new -oHostKeyAlgorithms=+ssh-dss root@$SERVER_HOST" # For Digital Ocean
 #SSH_COMMAND="ssh -t -i ~/.ssh/YOUR_KEY.pem ubuntu@$SERVER_HOST" # For AWS
