--- a/backend/k8s/values/dev.yaml
+++ b/backend/k8s/values/dev.yaml
@@ -1,7 +1,7 @@
 name: "backend"
 
 deployment:
-  repository: "http://localhost:32000/backend"
+  repository: "localhost:32000/backend"
 
 resources:
   limits:
