--- a/deploy/helm/ingress/templates/ingress.yaml
+++ b/deploy/helm/ingress/templates/ingress.yaml
@@ -1,7 +1,7 @@
 kind: Ingress
 apiVersion: networking.k8s.io/v1
 metadata:
-  name: {{ .Release.Name }}-ingress
+  name: ingress
 spec:
   rules:
     {{- range .Values.ingress.hosts }}
