--- a/deploy/local/local.env
+++ b/deploy/local/local.env
@@ -1,5 +1,5 @@
 SERVER_HOST="137.184.78.196"
 PROJECT_NAME="web_test"
-REPO_PATH="https://github.com/EliseevAlexey/$APP_NAME.git"
+REPO_PATH="https://github.com/EliseevAlexey/$PROJECT_NAME.git"
 SSH_COMMAND="ssh -o StrictHostKeyChecking=accept-new -oHostKeyAlgorithms=+ssh-dss root@$SERVER_HOST" # For Digital Ocean
 #SSH_COMMAND="ssh -t -i ~/.ssh/YOUR_KEY.pem ubuntu@$SERVER_HOST" # For AWS
