--- a/deploy/local/local.env
+++ b/deploy/local/local.env
@@ -1,4 +1,5 @@
-SERVER_HOST="142.93.246.209"
+SERVER_HOST="157.230.14.24"
+DROPLET_ID=354192411
 PROJECT_NAME="web_test"
 REPO_PATH="https://github.com/EliseevAlexey/$PROJECT_NAME.git"
 SSH_COMMAND="ssh -o StrictHostKeyChecking=accept-new -oHostKeyAlgorithms=+ssh-dss root@$SERVER_HOST" # For Digital Ocean
