--- a/deploy/local/local.env
+++ b/deploy/local/local.env
@@ -1,5 +1,5 @@
-SERVER_HOST="157.230.14.24"
-DROPLET_ID=111222
+SERVER_HOST="147.182.218.6"
+DROPLET_ID=354194992
 PROJECT_NAME="web_test"
 REPO_PATH="https://github.com/EliseevAlexey/$PROJECT_NAME.git"
 SSH_COMMAND="ssh -o StrictHostKeyChecking=accept-new -oHostKeyAlgorithms=+ssh-dss root@$SERVER_HOST" # For Digital Ocean
